# AdventOfCode2022

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
days/day01/: day01.cpp  day01.h  main.cpp  test.cpp
days/day02/: day02.cpp  day02.h  main.cpp  test.cpp
days/day03/: day03.cpp  day03.h  main.cpp  test.cpp
days/day04/: day04.cpp  day04.h  main.cpp  test.cpp
days/day05/: day05.cpp  day05.h  main.cpp  test.cpp
days/day06/: day06.cpp  day06.h  main.cpp  test.cpp
days/day07/: day07.cpp  day07.h  main.cpp  test.cpp
days/day08/: day08.cpp  day08.h  main.cpp  test.cpp
util/: file_loader.cpp  file_loader.h  file_loader.inl  vector2d.cpp  vector2d.h
